troubleshooting api and working on tester pt.1

--- a/tester/index.html
+++ b/tester/index.html
@@ -15,6 +15,8 @@
 			<option value="PUT"></option>
 			<option value="DELETE"></option>
 		</datalist>
+		<label> Repeat: <input type="checkbox" id="repeat"></label><br/>
+		<label> Time between repeats [ms] <input type="number" id="timeout" min="1"></label><br/>
 		<label> Args: <br/>
 			<textarea id="args"></textarea>
 		</label> <br/>
