--- a/tester/index.html
+++ b/tester/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>API test</title>
+	<link rel="stylesheet" href="../css/rectangular-meter-progress-range.css">
 	<link rel="stylesheet" href=".css">
 	<script src=".js"></script>
 </head>
@@ -18,7 +19,8 @@
 		</datalist>
 		<label> Repeat: <input type="checkbox" id="repeat"></label><br/>
 		<label> Time between requests [ms] <input type="number" id="timeout" min="1"></label><br/>
-		<meter id="timeTillNextRequest"></meter>
+		Time till next request: <br/>
+		<meter id="timeTillNextRequest"></meter><br/>
 		<label> Args: <br/>
 			<textarea id="args"></textarea>
 		</label> <br/>
