working on tester pt.4

--- a/tester/index.html
+++ b/tester/index.html
@@ -19,8 +19,8 @@
 		</datalist>
 		<label> Repeat: <input type="checkbox" id="repeat"></label><br/>
 		<label> Time between requests [ms] <input type="number" id="timeout" min="1"></label><br/>
-		Time till next request: <br/>
-		<meter id="timeTillNextRequest"></meter><br/>
+		Estimated time till next request: <br/>
+		<meter id="timeTillNextRequest" min="0" max="1"></meter><br/>
 		<label> Args: <br/>
 			<textarea id="args"></textarea>
 		</label> <br/>
