added "clear output" button

--- a/tester/index.html
+++ b/tester/index.html
@@ -27,6 +27,7 @@
 		Output: <br/><output> <textarea id="output" readonly></textarea></output><br/>
 		<button type="submit">Submit</button>
 	</form>
+	<button onclick="clearOutput()">Clear Output</button>
 	<p id="message"></p>
 </body>
 </html>
