--- a/tester/index.html
+++ b/tester/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>API test</title>
+	<link rel="stylesheet" href="../css/dark-and-light-mode.css">
 	<link rel="stylesheet" href="../css/rectangular-meter-progress-range.css">
 	<link rel="stylesheet" href=".css">
 	<script src=".js"></script>
