--- a/front-end/index.html
+++ b/front-end/index.html
@@ -7,7 +7,7 @@
 		<title>Magazyny</title>
 	</head>
 	<body>
-		<div id="root"></div>
+		<div id="root" class="app-container"></div>
 		<script type="module" src="/src/main.jsx"></script>
 	</body>
 </html>
